--- a/docs/lecture561/lecture02.Rmd
+++ b/docs/lecture561/lecture02.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "STAT 561"
+title: "STAT 561 Week 2"
 subtitle: "www.mth.pdx.edu/~fountain"
 author: "Teached by Fountain"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
@@ -15,31 +15,100 @@ output:
 
 ## {.tabset .tabset-fade .tabset-pills}
 
-### week 1  {.tabset .tabset-fade .tabset-pills} 
+### 2018.10.2  {.tabset .tabset-fade .tabset-pills} 
 
-#### 1. Set Theory
-Definition  
+#### 1-5. Conditional Probability
 
-* An **experiment** is a process that leads to one of several possible outcomes.
+> $P(A|B)=\frac{P(A\cap B)}{P(B)}$, provided P(B)>0
 
-* The **sample space** (S) is the set of all possible outcomes of an experiment.
+Is this a vaild probability function?  
+(1) $\forall A, is P(A|B)\ge0$ yes
+(2) $P(S|B)=\frac{P(S\cap B)}{P(B)}=\frac{P(B)}{P(B)}=1$ yes
 
-* An **event** is a subset of S.
+##### 3. 
 
+##### 4-5. Example
 
- name | symbol | theorem | equation
- :------: | :------: | :------: | :------:
- subset | $\subset$ | Commutativity  | $A\cup B= B\cap A,A\cap B=B\cap A$
- intersection | $\cap$  | Associativity  | $A\cup(B\cup C)=(A\cup B)\cup C$
- union | $\cup$  | | $A\cap(B\cap C)=(A\cap B)\cap C$
- Complement of A | $A^c$  | Distributive Laws  | $A\cap(B\cup C)=(A\cap B)\cup(A\cap C)$
- empty set | $\emptyset$  |  | $A\cup(B\cap C)=(A\cup B)\cap(A\cup C)$
- | |  | DeMorgan's Laws  | $(A\cup B)^c=A^c\cap B^c$
- | |  |   |  $(A\cap B)^c=A^c\cup B^c$
+#### 6-11. Bates' Rule
 
-
-#### 2. Bayes' rule
+##### 8-11. Example
 
 $$P(B|A)=\frac{P(B|A)P(A)}{P(B|A)P(A)+P(B|A^c)P(A^c)} $$
 
 
+### 2018.10.4  {.tabset .tabset-fade .tabset-pills} 
+#### 1.2.
+
+Assume P(M)=P(F)=0.5; Assume independent births
+
+You see a person with one of their children, a son. You know that they have 2 children. Find the probability that their other child is a son.
+
+Let A: 1st child is M; B: 2nd child is M, Find
+
+$$P(A\cap B|A\cup B)=\frac{P[(A\cup B)\cap(A\cup B)]}{P(A\cup B)}=\frac{P(A\cap B)}{P(A\cup B)}=\frac{\frac14}{\frac34}=\frac13$$
+#### 3. Monty Hall problem
+
+You choose door #1. Monty Hall opens one of the 2 remaining doors to reveal a joke prize. He them gives you the chance to swith your choose. Should you?
+
+Swich $\implies P(w)=\frac23$
+
+#### 4-10. Random variable  
+##### 4.Definition of Random variable
+> A random variable is a function from the sample space into the set of real numbers
+
+$$X:S\to \mathbb{R}$$
+
+> The range of the random variable X is the set of real numbers that X maps onto
+
+##### 5.Example: Flip 2 coins
+
+S={HH, HT, TH, TT}
+
+let X be the # of heads
+
+X(HH)=2, X(HTH)=1, X(TH)=1, X(TT)=0. range of X is {0,1,2}
+
+##### 6. dicrete and continuous
+> If the range of X is countable (finite or countable infinite), then X is a discrete random variable.
+
+> If the range of X is an interval, then X is a continuous random variable.
+
+> let A be a subset of the range of X.
+
+$$P_x(A)=P[\{s\in S: X(s)\in A\}]$$
+
+##### 7.Example: Roll 2 coins
+
+$$S=\begin{Bmatrix}
+11 & 12 & \cdots & 16 \\ 
+21 & 22 & \cdots & 26 \\ 
+\vdots & \vdots & \vdots & \vdots \\
+61 & 62 & \cdots & 66 \end{Bmatrix}$$
+
+Let X be the maximum of the 2 dice
+Find the probability that x=5
+
+$$P_x(\{5\})=P\big[\{15,25,35,45,51,52,53,54,55\}\big]=\frac9{36}=\frac14$$
+
+##### 8. Consider the discrete case
+
+> let $r_i\in range of X$, let $p_x(r_i)=Px(\{r_i\}),\ p_x$ is called a **probability mass function** (pmf)
+
+> let $F_X(x)=PX\big[(-\infty,x])\big]$, this is called the cumulative distribution function (cdf) of the random variable X.
+
+##### 9.10. Example: Flip 3 coins
+
+let x= # heads
+
+Find the pmf ; cdf for x
+
+S={HHH, HTH, HHT, HTT, THH, THT, TTH, TTT}
+ ={3,   2,   2,   1,   2,   1,   1,   0}
+
+pmf:
+$$p_x(0)=\frac18\quad p_x(1)=\frac38\quad p_x(2)=\frac18\quad p_x(3)=\frac18\quad p_x(1.5)=0$$
+
+cdf
+ $$F(x)=P(X\le x)=0$$
+ 
+ 
