--- a/static/lecture561/lecture02.Rmd
+++ b/static/lecture561/lecture02.Rmd
@@ -1,7 +1,6 @@
 ---
-title: "STAT 561 Week 2"
-subtitle: "www.mth.pdx.edu/~fountain"
-author: "Teached by Fountain"
+title: "conditional prabability,Bayes,rv,cdf,pmf"
+subtitle: "STAT 561 Week 2"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
   html_document:
@@ -24,10 +23,37 @@ output:
 Is this a vaild probability function?  
 (1) $\forall A, is P(A|B)\ge0$ yes
 (2) $P(S|B)=\frac{P(S\cap B)}{P(B)}=\frac{P(B)}{P(B)}=1$ yes
+(3) Suppose $A_1\cap A_2=\emptyset$ 
+
+$$P(A_1\cup A_2|B)=\frac{P[(A_1\cup A_2)\cap B]}{P(B)}=\frac{P[(A_1\cap B)\cup (A_2\cap B)]}{P(B)}=\frac{P[(A_1\cap B)+P(A_2\cap B)]}{P(B)}=P(A_1|B)+P(A_2|B)$$
 
 ##### 3. 
 
-##### 4-5. Example
+The events A and B are independent, if $P(A\cap B)=P(A)P(B)$
+
+Note: Suppose P(B)>0 and that A and B are independent, then
+
+$$P(A|B)=\frac{P(A\cap B)}{P(B)}=\frac{P(A)P(B)}{P(B)}=P(A)$$
+
+##### 4. Example Roll 2 dice
+
+$$S=\begin{Bmatrix}
+11 & 12 & \cdots & 16 \\ 
+21 & 22 & \cdots & 26 \\ 
+\vdots & \vdots & \vdots & \vdots \\
+61 & 62 & \cdots & 66 \end{Bmatrix}$$
+
+let A be the event that the 1st dice=6; B....=6. 
+
+$$P(A)=\frac6{36},\quad P(B)=\frac6{36},\quad P(A\cap B)\frac1{36}$$
+
+##### 5. Example Draw 2 cards 
+
+Draw 2 cards from a deck of 52 without replacement. let A: 1st card is an ace; B: 2nd...
+
+
+
+
 
 #### 6-11. Bates' Rule
 
@@ -46,6 +72,7 @@ You see a person with one of their children, a son. You know that they have 2 ch
 Let A: 1st child is M; B: 2nd child is M, Find
 
 $$P(A\cap B|A\cup B)=\frac{P[(A\cup B)\cap(A\cup B)]}{P(A\cup B)}=\frac{P(A\cap B)}{P(A\cup B)}=\frac{\frac14}{\frac34}=\frac13$$
+
 #### 3. Monty Hall problem
 
 You choose door #1. Monty Hall opens one of the 2 remaining doors to reveal a joke prize. He them gives you the chance to swith your choose. Should you?
@@ -90,7 +117,7 @@ Find the probability that x=5
 
 $$P_x(\{5\})=P\big[\{15,25,35,45,51,52,53,54,55\}\big]=\frac9{36}=\frac14$$
 
-##### 8. Consider the discrete case
+#### 8. pmf & cdf
 
 > let $r_i\in range of X$, let $p_x(r_i)=Px(\{r_i\}),\ p_x$ is called a **probability mass function** (pmf)
 
