arrange the 561 lecture1-3

--- a/docs/lecture561/lecture03.Rmd
+++ b/docs/lecture561/lecture03.Rmd
@@ -14,8 +14,8 @@ output:
 
 ## {.tabset .tabset-fade .tabset-pills}
 
-### 2018.10.9  {.tabset .tabset-fade .tabset-pills} 
-
+### Transformation  {.tabset .tabset-fade .tabset-pills} 
+2018.10.11
 #### 1-5. Transformation
 
 
@@ -25,7 +25,7 @@ output:
 
 
 
-### 2018.10.11  {.tabset .tabset-fade .tabset-pills} 
+### 2018.10.13  {.tabset .tabset-fade .tabset-pills} 
 #### 1.2. expected values
 
 
