--- a/docs/lecture561/lecture02.Rmd
+++ b/docs/lecture561/lecture02.Rmd
@@ -14,9 +14,9 @@ output:
 
 ## {.tabset .tabset-fade .tabset-pills}
 
-### 2018.10.2  {.tabset .tabset-fade .tabset-pills} 
-
-#### 1-5. Conditional Probability
+### 1.3 Conditional Probability  
+2018.10.2
+#### 1-2. 
 
 > $P(A|B)=\frac{P(A\cap B)}{P(B)}$, provided P(B)>0
 
@@ -27,7 +27,7 @@ Is this a vaild probability function?
 
 $$P(A_1\cup A_2|B)=\frac{P[(A_1\cup A_2)\cap B]}{P(B)}=\frac{P[(A_1\cap B)\cup (A_2\cap B)]}{P(B)}=\frac{P[(A_1\cap B)+P(A_2\cap B)]}{P(B)}=P(A_1|B)+P(A_2|B)$$
 
-##### 3. 
+#### 3. 
 
 The events A and B are independent, if $P(A\cap B)=P(A)P(B)$
 
@@ -35,7 +35,7 @@ Note: Suppose P(B)>0 and that A and B are independent, then
 
 $$P(A|B)=\frac{P(A\cap B)}{P(B)}=\frac{P(A)P(B)}{P(B)}=P(A)$$
 
-##### 4. Example Roll 2 dice
+#### 4. Example Roll 2 dice
 
 $$S=\begin{Bmatrix}
 11 & 12 & \cdots & 16 \\ 
@@ -47,22 +47,19 @@ let A be the event that the 1st dice=6; B....=6.
 
 $$P(A)=\frac6{36},\quad P(B)=\frac6{36},\quad P(A\cap B)\frac1{36}$$
 
-##### 5. Example Draw 2 cards 
+#### 5. Example Draw 2 cards 
 
 Draw 2 cards from a deck of 52 without replacement. let A: 1st card is an ace; B: 2nd...
 
+#### 6. Law of Total Prabability
 
+#### 7. Bayes' Rule
 
-
-
-#### 6-11. Bates' Rule
-
-##### 8-11. Example
+#### 8-11. Example
 
 $$P(B|A)=\frac{P(B|A)P(A)}{P(B|A)P(A)+P(B|A^c)P(A^c)} $$
 
-
-### 2018.10.4  {.tabset .tabset-fade .tabset-pills} 
+2018.10.4  
 #### 1.2.
 
 Assume P(M)=P(F)=0.5; Assume independent births
@@ -79,15 +76,16 @@ You choose door #1. Monty Hall opens one of the 2 remaining doors to reveal a jo
 
 Swich $\implies P(w)=\frac23$
 
-#### 4-10. Random variable  
-##### 4.Definition of Random variable
+### 1.4 Random variable  
+
+#### 4.Definition of Random variable
 > A random variable is a function from the sample space into the set of real numbers
 
 $$X:S\to \mathbb{R}$$
 
 > The range of the random variable X is the set of real numbers that X maps onto
 
-##### 5.Example: Flip 2 coins
+#### 5.Example: Flip 2 coins
 
 S={HH, HT, TH, TT}
 
@@ -95,16 +93,17 @@ let X be the # of heads
 
 X(HH)=2, X(HTH)=1, X(TH)=1, X(TT)=0. range of X is {0,1,2}
 
-##### 6. dicrete and continuous
-> If the range of X is countable (finite or countable infinite), then X is a discrete random variable.
+#### 6. dicrete and continuous
 
-> If the range of X is an interval, then X is a continuous random variable.
+> If the range of X is countable (finite or countable infinite), then X is a **discrete random variable**.
+
+> If the range of X is an interval, then X is a **continuous random variable**.
 
 > let A be a subset of the range of X.
 
 $$P_x(A)=P[\{s\in S: X(s)\in A\}]$$
 
-##### 7.Example: Roll 2 coins
+#### 7.Example: Roll 2 coins
 
 $$S=\begin{Bmatrix}
 11 & 12 & \cdots & 16 \\ 
@@ -117,13 +116,16 @@ Find the probability that x=5
 
 $$P_x(\{5\})=P\big[\{15,25,35,45,51,52,53,54,55\}\big]=\frac9{36}=\frac14$$
 
-#### 8. pmf & cdf
+### 1.5 Distribution Functions
+
+### 1.6 Density and Mass Functions
+#### 8.
 
 > let $r_i\in range of X$, let $p_x(r_i)=Px(\{r_i\}),\ p_x$ is called a **probability mass function** (pmf)
 
-> let $F_X(x)=PX\big[(-\infty,x])\big]$, this is called the cumulative distribution function (cdf) of the random variable X.
+> let $F_X(x)=PX\big[(-\infty,x])\big]$, this is called the **cumulative distribution function** (cdf) of the random variable X.
 
-##### 9.10. Example: Flip 3 coins
+#### 9.10. Example: Flip 3 coins
 
 let x= # heads
 
@@ -138,4 +140,6 @@ $$p_x(0)=\frac18\quad p_x(1)=\frac38\quad p_x(2)=\frac18\quad p_x(3)=\frac18\qua
 cdf
  $$F(x)=P(X\le x)=0$$
  
- 
+2018.10.4
+
+### pdf
