arrange 561 lecture1-3 2nd

--- a/docs/lecture561/lecture02.Rmd
+++ b/docs/lecture561/lecture02.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "conditional prabability,Bayes,rv,cdf,pmf"
+title: "Probability Theory II"
 subtitle: "STAT 561 Week 2"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
@@ -15,7 +15,9 @@ output:
 ## {.tabset .tabset-fade .tabset-pills}
 
 ### 1.3 Conditional Probability  
-2018.10.2
+
+_2018.10.2_
+
 #### 1-2. 
 
 > $P(A|B)=\frac{P(A\cap B)}{P(B)}$, provided P(B)>0
@@ -59,7 +61,8 @@ Draw 2 cards from a deck of 52 without replacement. let A: 1st card is an ace; B
 
 $$P(B|A)=\frac{P(B|A)P(A)}{P(B|A)P(A)+P(B|A^c)P(A^c)} $$
 
-2018.10.4  
+_2018.10.4_  
+
 #### 1.2.
 
 Assume P(M)=P(F)=0.5; Assume independent births
@@ -93,6 +96,8 @@ let X be the # of heads
 
 X(HH)=2, X(HTH)=1, X(TH)=1, X(TT)=0. range of X is {0,1,2}
 
+### 1.5 Distribution Functions
+
 #### 6. dicrete and continuous
 
 > If the range of X is countable (finite or countable infinite), then X is a **discrete random variable**.
@@ -116,10 +121,9 @@ Find the probability that x=5
 
 $$P_x(\{5\})=P\big[\{15,25,35,45,51,52,53,54,55\}\big]=\frac9{36}=\frac14$$
 
-### 1.5 Distribution Functions
-
 ### 1.6 Density and Mass Functions
-#### 8.
+
+#### 8. 
 
 > let $r_i\in range of X$, let $p_x(r_i)=Px(\{r_i\}),\ p_x$ is called a **probability mass function** (pmf)
 
@@ -140,6 +144,6 @@ $$p_x(0)=\frac18\quad p_x(1)=\frac38\quad p_x(2)=\frac18\quad p_x(3)=\frac18\qua
 cdf
  $$F(x)=P(X\le x)=0$$
  
-2018.10.4
+_2018.10.9_
 
-### pdf
+#### pdf
