--- a/docs/lecture561/lecture02.Rmd
+++ b/docs/lecture561/lecture02.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Probability Theory II"
-subtitle: "STAT 561 Week 2"
+title: "Probability Theory 3-6"
+subtitle: "STAT 561 Week 2,3"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
   html_document:
@@ -16,20 +16,23 @@ output:
 
 ### 1.3 Conditional Probability  
 
-_2018.10.2_
+`2018.10.2`
 
-#### 1-2. 
+#### 1. Conditional Probability
+Definition 1.3.2  
 
 > $P(A|B)=\frac{P(A\cap B)}{P(B)}$, provided P(B)>0
 
-Is this a vaild probability function?  
-(1) $\forall A, is P(A|B)\ge0$ yes
-(2) $P(S|B)=\frac{P(S\cap B)}{P(B)}=\frac{P(B)}{P(B)}=1$ yes
-(3) Suppose $A_1\cap A_2=\emptyset$ 
+#### 2. Is this a vaild probability function?  
+
+ > (1) $\forall A, is P(A|B)\ge0$ yes
+   (2) $P(S|B)=\frac{P(S\cap B)}{P(B)}=\frac{P(B)}{P(B)}=1$ yes
+   (3) Suppose $A_1\cap A_2=\emptyset$ 
 
 $$P(A_1\cup A_2|B)=\frac{P[(A_1\cup A_2)\cap B]}{P(B)}=\frac{P[(A_1\cap B)\cup (A_2\cap B)]}{P(B)}=\frac{P[(A_1\cap B)+P(A_2\cap B)]}{P(B)}=P(A_1|B)+P(A_2|B)$$
 
-#### 3. 
+#### 3. statistically independent
+Definition 1.3.7
 
 The events A and B are independent, if $P(A\cap B)=P(A)P(B)$
 
@@ -47,23 +50,57 @@ $$S=\begin{Bmatrix}
 
 let A be the event that the 1st dice=6; B....=6. 
 
-$$P(A)=\frac6{36},\quad P(B)=\frac6{36},\quad P(A\cap B)\frac1{36}$$
+$$P(A)=\frac6{36},\quad P(B)=\frac6{36},\quad P(A\cap B)=\frac1{36}$$
 
-#### 5. Example Draw 2 cards 
+Since $\frac1{36}=\frac16\frac16$, A adn B are independent.
 
-Draw 2 cards from a deck of 52 without replacement. let A: 1st card is an ace; B: 2nd...
+#### 5. Example Draw 2 cards
 
-#### 6. Law of Total Prabability
+Draw 2 cards from a deck of 52 without replacement.   
+
+let A: 1st card is an ace; 
+    B: 2nd...
+
+$$P(A\cap B)=\frac{4\times 3}{52\times 51}=\frac1{13\times 17}\ne\frac1{13}\frac1{13}$$
+$$P(A)=\frac{4\times 51}{52\times 51}=\frac4{52}=\frac1{13}$$
+$$P(B)=\frac{4\times 3+48\times 4}{52\times 51}=\frac4{52}=\frac1{13}$$
+Therefore A and B are dependent
+
+#### 6. (recall 1.2.2)
+
+According to the Law of Total Probability  
+Theorem 1.2.11 (a).  
+$$P(A)=\sum_{i=1}^\infty{P(C_i)}P(A|C_i)$$
 
 #### 7. Bayes' Rule
+Theorem 1.3.5
+Select a particular index K where $P(C_k)\ne0$
+
+$$P(C_k|A)=\frac{P(C_k\cap A)}{P(A)}=\frac{P(C_k)P(A|C_k) }{\sum_{i=1}^\infty{P(C_i)}P(A|C_i)}$$
 
 #### 8-11. Example
 
-$$P(B|A)=\frac{P(B|A)P(A)}{P(B|A)P(A)+P(B|A^c)P(A^c)} $$
+If the person does not hase the substance, the test results will be negative 96% of the time.
 
-_2018.10.4_  
+$$P(B^c|A^c)=0.96$$
 
-#### 1.2.
+Question: Given that the test results are positive, what is the prabability that the person uses the substance?
+
+let A: person uses substances
+    B: test result is positive
+
+Assume: 1 in 20 persons use the substance P(A)=0.05
+
+If the person uses the substance, the test results will be positive 99% of the time. P(B|A)=0.99
+<picture>
+
+How does this use Bayes's Rule?
+
+$$P(B|A)=\frac{P(B|A)P(A)}{P(B|A)P(A)+P(B|A^c)P(A^c)}=\frac{0.05\times 0.99}{0.05\times0.99+0.95\times0.04}=0.566 $$
+
+`2018.10.4`
+
+#### 1.2. Two sons problem
 
 Assume P(M)=P(F)=0.5; Assume independent births
 
@@ -79,9 +116,12 @@ You choose door #1. Monty Hall opens one of the 2 remaining doors to reveal a jo
 
 Swich $\implies P(w)=\frac23$
 
+
 ### 1.4 Random variable  
 
-#### 4.Definition of Random variable
+#### 4. Random variable
+Definition 1.4.1
+
 > A random variable is a function from the sample space into the set of real numbers
 
 $$X:S\to \mathbb{R}$$
@@ -96,13 +136,18 @@ let X be the # of heads
 
 X(HH)=2, X(HTH)=1, X(TH)=1, X(TT)=0. range of X is {0,1,2}
 
-### 1.5 Distribution Functions
 
-#### 6. dicrete and continuous
+#### 6. Definitions
+
+Definition 1.5.7
 
 > If the range of X is countable (finite or countable infinite), then X is a **discrete random variable**.
 
+Definition 1.5.8
+
 > If the range of X is an interval, then X is a **continuous random variable**.
+
+Definition of induced **probability function**
 
 > let A be a subset of the range of X.
 
@@ -121,12 +166,14 @@ Find the probability that x=5
 
 $$P_x(\{5\})=P\big[\{15,25,35,45,51,52,53,54,55\}\big]=\frac9{36}=\frac14$$
 
-### 1.6 Density and Mass Functions
+### 1.5 Distribution Functions
 
-#### 8. 
+#### 8. pmf $ cdf
 
+definition 1.6.1
 > let $r_i\in range of X$, let $p_x(r_i)=Px(\{r_i\}),\ p_x$ is called a **probability mass function** (pmf)
 
+definition 1.5.1
 > let $F_X(x)=PX\big[(-\infty,x])\big]$, this is called the **cumulative distribution function** (cdf) of the random variable X.
 
 #### 9.10. Example: Flip 3 coins
@@ -143,7 +190,22 @@ $$p_x(0)=\frac18\quad p_x(1)=\frac38\quad p_x(2)=\frac18\quad p_x(3)=\frac18\qua
 
 cdf
  $$F(x)=P(X\le x)=0$$
- 
-_2018.10.9_
 
-#### pdf
+### 1.6 Density and Mass Functions 
+
+`2018.10.9`
+
+#### 1. cdf conditions
+Theorem 1.5.3 
+
+>A cdf F(x) should satisfy 3 conditions:   
+a. $\lim_{x\to-\infty}F(x)=0\ \& \lim_{x\to\infty}F(x)=1$;  
+b. F is non-decreasing; and   
+c. F is right-continuous, which means $\lim_{x\to\infty}f(x)>0$
+
+#### 2. proof condition c.
+
+#### 3. Probability Density Function
+Definition 1.6.3
+
+#### 4. Proof pdf
