--- a/static/lecture561/lecture01.Rmd
+++ b/static/lecture561/lecture01.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Prabability Theory I"
+title: "Prabability Theory 1-2"
 subtitle: "STAT 561 Week 1"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
@@ -12,16 +12,10 @@ output:
 
 ---
 
-```{r setup, include=F}
-knitr::opts_chunk$set(message=FALSE, warning=F, echo=F)
-options(width = 2000)
-options(repos="https://cran.rstudio.com")
-```
-
 ## {.tabset .tabset-fade .tabset-pills}
 
 ### 1.1 Set Theory 
-_2018.9.25_
+`2018.9.25`
 
 #### 1. Definition 
 
@@ -44,17 +38,17 @@ _2018.9.25_
 
 ### 1.2.1 Axiomatic Foundations 
 #### 2. Borel field
-* A and B are _disjoint or mutually exclusive_, if $A\cap B=\emptyset$
-* Let B be a subset of all possible subset of S. Then B is a **Borel field** or a $\sigma$-algebra, if
 
-> 
+ > A and B are **disjoint** or **mutually exclusive**, if $A\cap B=\emptyset$
+
+ > Let B be a subset of all possible subset of S. Then B is a **Borel field** or a $\sigma$-algebra, if  
  (1). $\emptyset\in B$  
  (2). if $A\in B, then\ A^c\in B$  
  (3). if $A_{1},A_{2},A_{3},...\in B, then\ \bigcup_{n=1}^{\infty}\in B$  
 
 #### 3. Kolmogorov Axioms/of Probability
-let B be a **Borel field**. Then P is a **probability set function** if
->   
+
+ > let B be a **Borel field**. Then P is a **probability set function** if  
    (1). $\forall A\in B,\ P(A)\ge0$  
    (2). $P(S)=1$  
    (3). If $A_{1},A_{2},A_{3}$,...are pairwise disjoint, then $\ P(\bigcup_{n=1}^{\infty}A_i)=\sum_{i=1}^{\infty}P(A_{i})$
@@ -67,17 +61,16 @@ $$B=\{\emptyset ,S,\{1,2\},\{3,4,5,6\}\}$$
   
 is a well-defined *Borel field*  
 Define：
-> $P(A)=\begin{cases}1&if\ 2\in A \\o &otherwise\end{cases}$  
-  
-  This is a well-defined *probability function*  
-Define: 
-> $P(A)=\frac{element in A}{6}$  
+ $P(A)=\begin{cases}1&if\ 2\in A \\o &otherwise\end{cases}$  
+This is a well-defined *probability function*  
 
+Define: 
+ $P(A)=\frac{element in A}{6}$  
 This is also a well-defined *probability function*
 
-#### 5. The properties of the probability function
-Theorem 1.2.8:
+### 1.2.2 The Calculus of Probabilities
 
+#### 5. The properties of the probability function: Theorem 1.2.8
 > (1). $\forall A\in B,\ P(A^c)=1-P(A)$  
   (2). $P(\emptyset)=0$  
   (3). $P(A)\le1$
@@ -95,9 +88,8 @@ Proof (2):
    $\emptyset\cup S=S$  
    $P(\emptyset\cup S)=P(\emptyset)+P(S)$; $P(\emptyset\cup S)=P(S)=1$
 
-### 1.2.2 The Calculus of Probabilities
 
-#### 6. Theorem 1.2.9 
+#### 6. Theorem 1.2.9 (c).
 
 >  Let $A_{1}$ and $A_{2}$ the elements of B with $A_{1}\subset A_{2}$, then  
    $P(A_{1})\le P(A_{2})$
@@ -111,14 +103,13 @@ Proof:
    $\therefore\ P(A_{2})\ge P(A_{1})$
 
 
-_2018.09.27_
+`2018.09.27`
 
 #### 1. Theorem 1.2.9 (a)
 
-Define: $A\backslash B =A\cap B^c$
+> Define: $A\backslash B =A\cap B^c$
 
-
->   $P(A\cap B^c)=P(A)-P(A\cap B)$
+> $P(A\cap B^c)=P(A)-P(A\cap B)$
    
 Proof:
 
@@ -129,8 +120,6 @@ Proof:
    By K-3, $P(A)=P(A\cap B)+P(A\cap B^c)$  
    $\therefore P(A)=P(A\cap B)+P(A\cap B^c)$  
 
-#### 2. Theorem 1.2.9 (b)
-
 >  $P(A\cup B)=P(A)+P(B)-P(A\cap B)$
 
 Proof:
@@ -140,14 +129,13 @@ Proof:
    $P(A\cup B)=P(A)+ P(B\cap A^c)$  
    $=P(A)+P(B)-P(B\cap A)$  
 
-
+#### 2.3. Law of Total Probability
+Theorem 1.2.11 (a). 
 Define:
 
 >  $C_{1},C_{2},C_{3},...$ form a partition of S if  
    (1). $\bigcup_{i=1}^\infty C_i=S$ and  
    (2). $C_{i}\cap C_{j}=\emptyset \quad \forall i\ne j$ (pairwise disjoint)
-   
-Theorem 1.2.11: Law of Total Probability
 
 >  If $C_{1},C_{2},C_{3},...$ is a portition of S, then  
    $P(A)=\sum_{i=1}^\infty P(A\cap C_{i})$ 
@@ -160,10 +148,10 @@ Proof:
 
 
 #### 4.5. Boole 's Inequality
-Theorem 1.2.11:
+Theorem 1.2.11 (b)
 
 >  Let $A_{1}, A_{2}$,...be events, then  
-   $P(\bigcup_{i=1}^\infty A_i)\le\sum_{i=1}^\infty P(A_{i})$ [Boole's Ineq]
+   $P(\bigcup_{i=1}^\infty A_i)\le\sum_{i=1}^\infty P(A_{i})$
 
 Proof:
 
@@ -188,9 +176,9 @@ Theorem 1.2.10
 >Suppose we have n events $A_1, A_2,...A_n$  
  with probabilities $P_i=P(A_i)$
 
-$$P(A_1\cap ...\cap A_n)^c=1-P(A_1\cap ...\cap A_n)$$  
-
->     [By DeMorgan] and [By Comlement Theorem]
+| $$P(A_1\cap ...\cap A_n)^c=1-P(A_1\cap ...\cap A_n)$$ |  
+| ---|---|
+| [By DeMorgan] | [By Comlement Theorem] |
 
 $$P(A_1^c\cup ...\cup A_n^c)\le\sum_{i=1}^n P(A_i^c)$$   [Boole]  
    $$=\sum_{i=1}^\infty[1-P(A_i)]=n-\sum_{i=1}^\infty P(A_i)$$  
@@ -207,35 +195,37 @@ Set $$\sum_{i=1}^np_i-(n-1)=0.95$$
     $$np=0.95+n-1$$
     $$p=1-\frac{0.05}n$$
 
-> Intepretation: If you do 10 simulations  
-Confidence intervals, each at 99.5%
-Confidence, you will have joint confidence of at least 95%
+ Intepretation: If you do 10 simulations Confidence intervals, each at 99.5% Confidence, you will have joint confidence of at least 95%
 
 ### 1.2.3 Counting Rules
 
-#### (1). Multiplication Rule 1.2.14:
-9.10.11.12.
+#### 9. (1). Multiplication Rule 
+Theorem 1.2.14:
 
 If you have/perform a sequence of procedures, then the total number of outcomes is the product of the number of possible outcomes at each step  $N$
 
 -Example: Flip 3 coins in sequence $2\times2\times2=8$
 
-#### (2). Factorial Rule 1.2.16: 
+#### 10. (2). Factorial Rule
+Theorem 1.2.16
 
 The number of ways of arranging or ordering n objects/items is $n!$  
 
-#### (3). Permutation Rule: Start with n objects. The number of ways of selecting and ordering r of them is
+#### 11. (3). Permutation Rule
+
+Start with n objects. The number of ways of selecting and ordering r of them is
 
 $$P_r^n=n(n-1)(n-2)...(n-r+1)=\frac{n!}{(n-r)!}$$
 
-#### (4). Combination Rule: 
+#### 12. (4). Combination Rule: 
+Theorem 1.2.17
 
 The number of ways of selecting r objects from n objects without regard to order, is "n choose r". 
 These numbers are also referred to as  **binomial coefficients** 
 
    $$C_r^n=\binom nr=\frac{P_r^n}{r!}=\frac{n!}{r!(n-r)!}$$
  
-#### (5). Permutation of like objects Rule:  
+#### 13. (5). Permutation of like objects Rule:  
 
 If there are n objects of K different types, then the number of ways that they can be oredered is
 
@@ -243,7 +233,9 @@ $$\frac{n!}{n_1!n_2!...n_k!}$$
   > Where $n_i$ is the number of items of type i  
     and $n_1+...+n_k=n$
 
-Ex: How many differenct ways can the letters in "STATISTICS" be arranged?
+#### 14. Example 
+
+How many differenct ways can the letters in "STATISTICS" be arranged?
  $$\frac{10!}{3!3!1!2!1!}=\left(_{3 3 1 2 1}^{10}\right)=50400 $$
 
 Number of possible arrangements of size r from n objects
