--- a/static/lecture564/reading01.Rmd
+++ b/static/lecture564/reading01.Rmd
@@ -1,5 +1,7 @@
 ---
-title: "Week 1 Notes"
+title: "1 Introduction & 2 Simple Linear Regression"
+subtitle: "STAT 564 Week 1"
+date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output: 
   html_document: 
     theme: yeti
@@ -9,16 +11,72 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-### Text
-- Chapter 1
+## {.tabset .tabset-fade .tabset-pills}
+
+https://onlinecourses.science.psu.edu/stat414/node/262/
+
+### 1 Introduction
+
+#### 1.1 Regression and Model Building
+
+`2018.09.24`
+
+#### Regression Analysis
+- Example 1
+
+- Main Goals of Regression Analysis
+
+- Regression Models
+
+- Regression Models building process
+
+
+### 2.1 Simple Linear Regression Model
+
+- Assumptions
+    - [1]
+    - [2]
+    - [3]
+    - [4]
+    - [5]
+
+### 2.2 Least-Suqares Estimation of the Parameters
+#### 2.2.1 Estimation of β0 and β1
+`2018.09.26`
+
+- Estimate Regression Parameters (or Coefficients)
+
+
+`2018.09.28`
+
+- The other forms of $S_{xx}\ and\ S_{xy}$
     - [1.1]
     - [1.3]
-- Chapter 2
+- Example 2
     - [2.2.1]
     - [2.2.2]
     - [2.2.3]
-### Class
-- Notes
-    - [09.24.2018](09.24.2018.pdf)
-    - [09.26.2018](09.26.2018.pdf)
-    - [09.28.2018](09.28.2018.pdf)
+
+### 2.2.2 Properties of the least-Squares Estimators
+
+#### 1. They are linear funcitons
+
+    
+#### 2. They are unbiased estimators of regression coefficients
+    - [1.1]
+
+`2018.10.1`
+
+#### 3. Variances and coariances
+
+
+
+#### 4. Gauss Markov Theorem
+
+#### 5. When errors
+
+$$\hat{\beta_0}\sim N\left(\beta_0,\dfrac{\sigma^2}{n}\right)$$
+
+$$\hat{\beta_1}\sim N\left(\beta_1,\dfrac{\sigma^2}{\sum_{i=1}^n (x_i-\bar{x})^2}\right)$$
+
+  
