--- a/static/lecture564/reading03.Rmd
+++ b/static/lecture564/reading03.Rmd
@@ -1,5 +1,7 @@
 ---
-title: "Week 3 Readings"
+title: "2.4 Interval Estimation"
+subtitle: "STAT 564 Week 3"
+date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output: 
   html_document: 
     theme: yeti
@@ -9,7 +11,35 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-### Required:
 
-- Textbook
-    - [Regression Analysis for the Social Sciences Chapter 5]()
+## {.tabset .tabset-fade .tabset-pills}
+
+### 2.4.1 Confidence Intervals on $β_0, β_1, and \sigma^2$
+
+#### $100(1-\alpha)%$ Confidence Interval for the true slope $(\beta_1)$:
+
+$$\hat{\beta_1}\pm t_{\alpha/2}se(\hat{\beta_1})=\hat{\beta_1}\pm t_{\alpha/2} \sqrt{\frac{\hat\sigma^2}{S_{xx}}}=\hat{\beta_1}\pm t_{\alpha/2,n-2}\times \sqrt{\dfrac{MSE}{\sum (x_i-\bar{x})^2}}=\hat{\beta_1}\pm t_{\alpha/2,n-2}\times \left(\dfrac{\sqrt{n}\hat{\sigma}}{\sqrt{n-2} \sqrt{\sum (x_i-\bar{x})^2}}\right)$$
+
+#### $100(1-\alpha)%$ Confidence Interval for the true intercept $(\beta_0)$:
+
+
+
+$$\hat{\beta_0}\pm t_{\alpha/2}se(\hat{\beta_0})=\hat{\beta_0}\pm t_{\alpha/2} \sqrt{\hat\sigma^2(\frac1n+\frac{\bar x^2}{S_{xx}})}=\hat{\beta_0}\pm t_{\alpha/2,n-2}\times \left(\sqrt{\dfrac{MSE}{n}}\right)=\hat{\beta_0}\pm t_{\alpha/2,n-2}\times \left(\sqrt{\dfrac{\hat{\sigma}^2}{n-2}}\right)$$
+
+#### $100(1-\alpha)%$ Confidence Interval for the true error variance $(\sigma^2)$:
+
+$$\Bigg[\dfrac{(n-2)\hat{\sigma}^2}{\chi^2_{\frac\alpha2}}, \dfrac{(n-2)\hat{\sigma}^2}{\chi^2_{1-\frac\alpha2}}\Bigg ]$$
+
+
+- Ex 2 Contd Consider the following data set, in which the variables of interest are x and y.
+    - [a] Test whether the true slope of the simple linear regression model is significantly different from zero.
+    - [b] Estimate the 95% confidence interval for the true slope of the simple linear regression model.
+    - [c] Estimate the 95% confidence interval for the true intercept of the simple linear regression model.
+
+`2018.10.8 Lab1`
+
+### 2.4.2 Interval Estimation of the Mean Response
+
+`2018.10.10`
+
+
