--- a/static/lecture564/reading02.Rmd
+++ b/static/lecture564/reading02.Rmd
@@ -40,7 +40,9 @@ $$H_0:\beta_1=\beta_{10}$$
 
 $$H_A:\beta_1\neq \beta_{10}$$
 
-$$t=\frac{\hat{\beta_1}-\beta_{10}}{se(\beta_1)}=\frac{\hat{\beta_1}-\beta_{10}}\sqrt {MSE/S_{xx}}=\dfrac{\hat{\beta_1}-\beta_{10}}{\sqrt{MSE/\sum(x_i-\bar{x})^2}}$$
+$$t=\frac{\hat{\beta_1}-\beta_{10}}{se(\beta_1)}=
+\frac{\hat{\beta_1}-\beta_{10}}{\sqrt{MSE/S_{xx}}}=
+\frac{\hat{\beta_1}-\beta_{10}}{\sqrt{MSE/\sum(x_i-\bar{x})^2}}$$
 
 #### 2.3.2 Testing Significance of Regression
 
