--- a/static/assignment561/hw02.Rmd
+++ b/static/assignment561/hw02.Rmd
@@ -164,5 +164,7 @@ $$P(V\le 5)=P(T<3)=\int_{0}^{3}f_T(t)dt=\int_{0}^{3}\frac1{1.5}e^{-\frac{t}{1.5}
  
 $$P(V\le v)=P(2T<v)=P(T<\frac{v}2)=\int_{0}^{\frac{v}2}f_T(v)dv=\int_{0}^{\frac{v}2}\frac1{1.5}e^{-\frac{v}{1.5}}dv=\int_{0}^{\frac{v}2}-e^{-\frac{v}{1.5}}d\frac {-v}{1.5}=-e^{-\frac{v}{3}}+e^{-\frac{0}{3}}=1-e^{-\frac{v}3}$$
 
+  For t>0, $T\in(-\infty, 0]\ is\ \emptyset,\ F_V(t)=P(V\in(-\infty, 0] )=P(T\in(-\infty, 0] )=0$
+
 $$\therefore  F_V(v)=\begin{cases}1-e^{-2}&6\le v\\1-e^{-\frac{v}3}&0<v<6\\0&-\infty<v<0\end{cases}$$
 
