refine the 561hw2

--- a/docs/assignment561/hw02.Rmd
+++ b/docs/assignment561/hw02.Rmd
@@ -20,7 +20,7 @@ C | B dies |
 
 Calculate P(A|W) as a function of Y. For what values of Y is P(A|W) less than,equal to, or greater than 1/3?  
 
- > A, B, c is a partitions of sample space. According the Bayes' rule
+ > A, B, C is a partitions of sample space. According the Bayes' rule
  
 $$P(A|W)=\frac{P(W|A)P(A)}{P(W|A)P(A)+P(W|B)P(B)+P(W|C)P(C)}=\frac{\gamma\frac13}{\gamma\frac13+0\frac13+\frac13}=\frac{\gamma}{\gamma+1}$$
 
@@ -44,7 +44,7 @@ $$\because\quad P(A)>0,\ P(B)>0,\ P(A)P(B)>0\quad \therefore\quad P(A)P(B)\ne P(
 
 (b) If A and B are independent, they cannot be mutually exclusive.
 
- > Acrroding the definition of statistically independent, When A and B are independent, $P(A\cap{B})=P(A)P(B)$. For P(A)>0 and P(B)>0, P(A\cap{B})>0, which means $A\cap B\ne\emptyset$. Therefore, A and B does not satisfy the definition of **paiwise disjoint**
+ > Acrroding the definition of statistically independent, When A and B are independent, $P(A\cap{B})=P(A)P(B)$. For P(A)>0 and P(B)>0, P(A)\cap P{B})>0, which means $A\cap B\ne\emptyset$. Therefore, A and B does not satisfy the definition of **paiwise disjoint**
 
 **1.47** Prove that the following functions are cdfs.
 
@@ -59,11 +59,11 @@ $$\lim_{x\to-\infty}F(x)=\lim_{x\to-\infty}[\frac12+\frac1\pi\tan^{-1}(x)]=\frac
 
 $$\lim_{x\to\infty}F(x)=\frac12+\frac1\pi(\frac\pi2)=1$$
 
- > This function satisfies the condition a. Differentiating Fx(x) gives
+ > This function satisfies the condition a. Differentiating F(x) gives
 
 $$F(x)'=\frac\partial{\partial{x}}[\frac12+\frac1\pi\tan^{-1}(x)]=\frac1{\pi(1+x^2)}>0$$
 
- > showing that F(x) is increasing and right-continuous. F(x) is a continuous cdf..
+ > showing that F(x) is increasing and right-continuous. F(x) is a continuous cdf.
 
 (b) $(1+e^{-x})^{-1} , x\in(-\infty,\infty)$
 
@@ -71,7 +71,7 @@ $$\because\quad \lim_{x\to-\infty}e^x=0,\quad\lim_{x\to-\infty}e^{-x}=\infty,\qu
 
 $$\text{in the same way, }\lim_{x\to\infty}F(x)=\lim_{x\to\infty}\frac1{1+e^{-x}}=\lim_{x\to\infty}\frac1{1+0}=1$$
 
- > This function satisfies the condition a. Differentiating Fx(x) gives
+ > This function satisfies the condition a. Differentiating F(x) gives
 
 $$F(x)'=\frac\partial{\partial{x}}\frac1{1+e^{-x}}=\frac{e^{-x}}{(1+e^{-x})^2}>0$$
 
@@ -83,7 +83,7 @@ $$\because\quad \lim_{x\to-\infty}e^x=0,\quad\lim_{x\to-\infty}e^{-x}=\infty,\qu
 
 $$\text{in the same way, }\lim_{x\to\infty}F(x)=\lim_{x\to\infty}e^{-e^{-x}}=e^0=1$$
 
- > This function satisfies the condition a. Differentiating Fx(x) gives
+ > This function satisfies the condition a. Differentiating F(x) gives
 
 $$F(x)'=\frac\partial{\partial{x}}e^{-e^{-x}}=e^{-e^{-x}}\frac\partial{\partial{x}}(-e^{-x})=e^{-e^{-x}}(-e^{-x})\frac\partial{\partial{x}}(-x)=e^{-e^{-x}}e^{-x}>0$$
 
@@ -95,7 +95,7 @@ $$\because\quad \lim_{x\to-\infty}e^x=1,\quad\lim_{x\to-\infty}e^{-x}=1,\quad \t
 
 $$\text{in the same way, }\lim_{x\to\infty}F(x)=\lim_{x\to\infty}(1-e^{-x})=1-e^0=1$$
 
- > This function satisfies the condition a. Differentiating Fx(x) gives
+ > This function satisfies the condition a. Differentiating F(x) gives
 
 $$F(x)'=\frac\partial{\partial{x}}(1-e^{-x})=-e^{-x}\frac\partial{\partial{x}}(-x)=e^{-x}>0$$
 
@@ -113,7 +113,7 @@ $$F_Y(y)=\begin{cases}\frac{1-\epsilon}{1+e^{-y}}，& y<0\\\epsilon+\frac{1-\eps
  
  $$\lim_{y\to0}F_Y(y)=\epsilon+\frac{1-\epsilon}{1+e^{-y}}=1=F(0)$$
 
- > No jump occurs when F(y) approaches 0 from the right. And $0<\epsilon<1$. This function satisfies the condition a and c. Differentiating Fx(x) gives
+ > No jump occurs when F(y) approaches 0 from the right. And $0<\epsilon<1$. This function satisfies the condition a and c. Differentiating F(x) gives
 
 $$F(y)'=\frac\partial{\partial{y}}(\epsilon+\frac{1-\epsilon}{1+e^{-y}})=(1-\epsilon)\frac{1+e^{-y}+\frac\partial{\partial{y}}(e^{-y})}{(1+e^{-y})^2}=\frac{1-\epsilon}{(1+e^{-y})^2}>0$$
 
@@ -151,11 +151,11 @@ $$f_T(t)=\frac1{1.5}e^{-\frac{t}{1.5}},\ t>0$$
 <!--$$\because -\infty<-\frac{t}{1.5}<0,\quad \therefore  \frac1{1.5}e^{-\frac{t}{1.5}}\in(0,\frac32)$$
 $$And\quad \int_{0}^{\infty}\frac1{1.5}e^{-\frac{t}{1.5}}dx=1$$-->
 
- > According the theorem 1.5.10 of **identically distributed**
+ > According to the theorem 1.5.10 of **identically distributed**
 
 $$F_V(t)=P(V\in(-\infty, t] )=P(T\in(-\infty, t])=F_T(t)$$
 
- > According the definition 1.6.3 of **probability density function**  
+ > According to the definition 1.6.3 of **probability density function**  
 When 0<t<3, V=5, then
 
 $$P(V\le 5)=P(T<3)=\int_{0}^{3}f_T(t)dt=\int_{0}^{3}\frac1{1.5}e^{-\frac{t}{1.5}}dt=\int_{0}^{3}-e^{-\frac{t}{1.5}}d\frac {-t}{1.5}=-e^{-\frac{3}{1.5}}+e^{-\frac{0}{1.5}}=1-e^{-2}$$
@@ -164,7 +164,7 @@ $$P(V\le 5)=P(T<3)=\int_{0}^{3}f_T(t)dt=\int_{0}^{3}\frac1{1.5}e^{-\frac{t}{1.5}
  
 $$P(V\le v)=P(2T<v)=P(T<\frac{v}2)=\int_{0}^{\frac{v}2}f_T(v)dv=\int_{0}^{\frac{v}2}\frac1{1.5}e^{-\frac{v}{1.5}}dv=\int_{0}^{\frac{v}2}-e^{-\frac{v}{1.5}}d\frac {-v}{1.5}=-e^{-\frac{v}{3}}+e^{-\frac{0}{3}}=1-e^{-\frac{v}3}$$
 
-  For t>0, $T\in(-\infty, 0]\ is\ \emptyset,\ F_V(t)=P(V\in(-\infty, 0] )=P(T\in(-\infty, 0] )=0$
+  > For t>0, $T\in(-\infty, 0]\ is\ \emptyset,\ F_V(t)=P(V\in(-\infty, 0] )=P(T\in(-\infty, 0] )=0$
 
 $$\therefore  F_V(v)=\begin{cases}1-e^{-2}&6\le v\\1-e^{-\frac{v}3}&0<v<6\\0&-\infty<v<0\end{cases}$$
 
