--- a/static/lecture564/reading03.Rmd
+++ b/static/lecture564/reading03.Rmd
@@ -30,16 +30,62 @@ $$\hat{\beta_0}\pm t_{\alpha/2}se(\hat{\beta_0})=\hat{\beta_0}\pm t_{\alpha/2} \
 
 $$\Bigg[\dfrac{(n-2)\hat{\sigma}^2}{\chi^2_{\frac\alpha2}}, \dfrac{(n-2)\hat{\sigma}^2}{\chi^2_{1-\frac\alpha2}}\Bigg ]$$
 
-
-- Ex 2 Contd Consider the following data set, in which the variables of interest are x and y.
-    - [a] Test whether the true slope of the simple linear regression model is significantly different from zero.
-    - [b] Estimate the 95% confidence interval for the true slope of the simple linear regression model.
-    - [c] Estimate the 95% confidence interval for the true intercept of the simple linear regression model.
-
 `2018.10.8 Lab1`
 
 ### 2.4.2 Interval Estimation of the Mean Response
 
 `2018.10.10`
 
+#### Ex 2 Contd.: Consider the following data set, in which the variables of interest are x=conmmuting distance(miles) and y=commuting time (min).
 
+
+---|---|---|---|---|---
+x|5|10|15|20|25
+y|8|16|22|23|31
+$\hat y=4.1+1.06x$|9.4|14.7|20|25.3|30.6
+$e^2=(y-\hat y)^2$|1.96|1.69|4|5.29|0.16
+
+
+$$\hat\sigma^2=MSE=\frac{SSE}{n-2}=\frac{\sum_1^n(y-\hat y)^2}{n-2}=\frac{13.1}{5-2}=4.367 $$
+
+(a) Compute the values of ANOVA table and test the significance of simple linear regression model for these data.
+
+$$n=5,\quad \bar y=20,\quad \sum y_i^2=2294,\quad \hat\sigma^2=4.367,\quad S{xy}=265,\quad S{xx}=250,\quad \hat\beta_1=1.06$$
+
+
+Source of Variation|Sum of Squars(SS)|Degrees of Freedom(df)|Mean Squares(MS)|F test statistic|P-value
+---|---|---|---|---|---
+Model(Regresion)|$\hat\beta_1S{xy}=1.06\times265=280.9$|1|$\frac{280.9}1$|$\frac{280.9}{4.367}$|$P(F>64.328)\approx0.01$
+Error(Residual)|SST-SSR=294-280.9=13.1|n-2=5-2=3|$\frac{13.1}3=4.3667$|64.328|
+Total|$\sum(y_i-\bar y)^2=\sum{y_i^2}-n\bar y^2=2294-5\times20^2=294$|n-1=4|||
+
+#### Ex 2 Contd Consider the following data set, in which the variables of interest are x and y.
+
+    - [a] Test whether the true slope of the simple linear regression model is significantly different from zero.
+
+$$H_0:\ \beta_1=0,\quad H_1: \beta_1\ne0$$
+
+$$Test\ statistic: t_0=\frac{\hat\beta_1-0}{se(\hat\beta_1)}=\frac{\hat\beta_1}{se(\hat\beta_1)}=\frac{1.06}{0.1322}=8.02$$
+
+$$se(\hat\beta_1)=\sqrt \frac{\hat\sigma^2}{S{xx}}=\sqrt{\frac{4.367}{250}}=0.1322$$
+
+$$df=n-2=5-2=3$$
+
+$$P-value=2\times P(t>|t_0|)2\times0.0025=0.005$$
+
+ > P-value<0.05, therefore, ture slope is different from zero.
+
+    - [b] Estimate the 95% confidence interval for the true slope of the simple linear regression model.
+
+$$\because\ df=n-2=5-2=3,\quad t_{\frac\alpha2}=t_{0.025}=3.182$$
+
+
+$$\hat{\beta_1}\pm t_{\alpha/2}se(\hat{\beta_1})=1.06\pm3.182\times0.1322=(0.639,1.481)$$
+
+    - [c] Estimate the 95% confidence interval for the true intercept of the simple linear regression model.
+
+$$se(\hat{\beta_0})=\sqrt{\hat\sigma^2(\frac1n+\frac{\bar x^2}{S_{xx}})}=4.367(\frac15+\frac{15^2}{250})=2.1917$$
+
+$$\hat{\beta_0}\pm t_{\alpha/2}se(\hat{\beta_0})=4.1\pm3.182\times2.1917=(-2.874,11.074)$$
+
+Since zero is inside thsi interval, ture intercept ($\beta_0$) can be zero with 95% confidence.
