--- a/docs/lecture564/reading02.Rmd
+++ b/docs/lecture564/reading02.Rmd
@@ -90,8 +90,22 @@ and if $\beta_1=0$, then
 
 $$\dfrac{dfR\times MSR}{\sigma^2}=\dfrac{SSR/dfR}{\sigma^2}=\dfrac{SSR/1}{\sigma^2}=\sim \chi^2_{(1)}$$
 
-because $E(MSR)=\sigma^2+\beta_1^2S_{xy}$
+$$\because E(MSR)=\sigma^2+\beta_1^2S_{xx}=\sigma^2+\beta_1S_{xy}$$
+
 Further, SSE and SSR are independent.
+
 Therefore, by definition of F distribution
 
 $$\frac{SSR/dfR}{SSE/dfE}=\frac{SSR/1}{SSE/(n-2)}=\frac{MSR}{MSE}\sim F_{(1,(n-2))}$$
+
+The F test statistic ($F_0$) is computed as shown in the ANOVA table for the testing significance of simple linear regression model.
+
+Analysis of Variance (ANOVA) for Testing Significance of Simple Linear Regression
+
+Source of Variation|Sum of Squars(SS)|Degrees of Freedom(df)|Mean Squares(MS)|F test statistic|P-value
+---|---|---|---|---|---
+Model(Regresion)|$SSR=\hat\beta_1S{xy}$|1|$MSR=\frac{SSR}1$|$\frac{MSR}{MSE}$|$P(F>F_0)$
+Error(Residual)|$SSE=SST-SSR$|n-2|$MSE=\frac{SSE}{n-2}$||
+Total|$SST=\sum_{i=1}^n(y_i-\bar y)^2$|n-1|||
+
+If the test statistic is much larger than 1 ($F_0>F(\alpha,1,n-2)$) (or p-value $\le$ significance level), then the true slope is different from zero and hence least squares line is statistically significant.
