--- a/docs/assignment564/lab02.Rmd
+++ b/docs/assignment564/lab02.Rmd
@@ -327,9 +327,9 @@ a. Find the least-squares estimator of $\beta_1$ for this model. Does this answe
 
 $$S(\beta_0,\beta_1)=\sum(y_i-\beta_0-\beta_1x_i)^2$$
 
-take the derivative of this with respect to /31 and set it equal to zero.
+take the derivative of this with respect to $\beta_1$ and set it equal to zero.
 
-$$-2\sum_{i=1}^n(y_i-\beta_0-\hat\beta_1x_i)x_i=0$$
+$$\left.\frac{\partial{SSE}}{\partial\beta_1}\right|_{\hat\beta_1}=-2\sum_{i=1}^n(y_i-\beta_0-\hat\beta_1x_i)x_i=0$$
 
 $$\hat\beta_1\sum_{i=1}^nx_i^2=\sum_{i=1}^n(y_i-\beta_0)x_i$$
 
