--- a/docs/assignment564/lab02.Rmd
+++ b/docs/assignment564/lab02.Rmd
@@ -293,12 +293,18 @@ Exercise 2.26 (Page 65): Consider the simple linear regression model $y=\beta_0+
 
 a. Show that $E(MS_R)=\sigma^2+\beta_1^2S_{xx}$
 
-$$E(MSR)=\frac{E(SSR)}1=E(\hat\beta_1^2S_{xx})=S_{xx}\{Var(\hat\beta_1)+[E(\hat\beta_1)]^2\}=S_{xx}(\frac{\sigma^2}{S_{xx}}+\beta_1^2)=\sigma^2+\beta_1^2S_{xx}$$
+$$\because \hat y_i=\hat\beta_0+\hat\beta_1x_i,\quad \hat\beta_0=\bar y-\bar x\hat\beta_1$$
+
+$$SSR=\sum_{i=1}^n(\hat y_i-\bar y)^2=\sum_{i=1}^n(\hat\beta_0+\hat\beta_1x_i-\bar y)^2=\sum_{i=1}^n(\bar y-\bar x\hat\beta_1+\hat\beta_1x_i-\bar y)^2=\hat\beta_1^2\sum_{i=1}^n(x_i-\bar x)^2=\hat\beta_1^2S_{xx}$$
+
+$$\therefore E(MSR)=\frac{E(SSR)}1=E(\hat\beta_1^2S_{xx})=S_{xx}\left(Var(\hat\beta_1)+[E(\hat\beta_1)]^2\right)=S_{xx}(\frac{\sigma^2}{S_{xx}}+\beta_1^2)=\sigma^2+\beta_1^2S_{xx}$$
 
 
 b. Show that $E(MS_{Res})=\sigma^2$.
 
  > According the appendix C.3.2,  MSE=SSE/(n-2) is an unbiased estimator for $\sigma^2$
+
+$$SSE=\sum_{i=1}^n(y_i-\hat y)^2=\sum_{i=1}^n(y_i-\hat\beta_0-\hat\beta_1x_i)^2=\sum_{i=1}^n(\bar y-\bar x\hat\beta_1+\hat\beta_1x_i-\bar y)^2=\hat\beta_1^2\sum_{i=1}^n(x_i-\bar x)^2=\hat\beta_1^2S_{xx}$$
 
 $$E(MSE)=E(\frac{SSE}{n-2})=\frac{\sigma^2}{n-2}E(\chi_{n-2}^2)=\sigma^2$$
 
