--- a/static/assignment564/lab02.Rmd
+++ b/static/assignment564/lab02.Rmd
@@ -333,9 +333,9 @@ $$E(y)=\beta_0+\beta_1x_1+\beta_2x_2$$
 
 a. Is the least-squares estimator of the slope in the original simple linear regression model unbiased?
 
-$$E(SSR)=$$
+$$\because \sum(x_{i1}-\bar x)=\sum{x_{i1}}-n\bar x=\sum{x_{i1}}-n\frac{\sum{x_{i1}}}n=0,\quad S_{xx}=\sum(x_{i1}-\bar x)x_{i1}$$
 
-$$E(\hat\beta_1)=E(\frac{\sum(x_i-\bar x)y_i}{S_{xx}})=\frac{\sum(x_{i1}-\bar x)}{Sxx}E(y_i)=\frac{\sum(x_{i1}-\bar x)}{Sxx}(\beta_0+\beta_1x_{i1}+\beta_2x_{i2})$$
+$$\therefore E(\hat\beta_1)=E(\frac{\sum(x_i-\bar x)y_i}{S_{xx}})=\frac{\sum(x_{i1}-\bar x)}{Sxx}E(y_i)=\frac{\sum(x_{i1}-\bar x)}{Sxx}E(\beta_0+\beta_1x_{i1}+\beta_2x_{i2})$$
 
 $$=\frac0{S_{xx}}\beta_0+\frac{\sum(x_{i1}-\bar x)x_{i1}}{S_{xx}}\beta_1+\frac{\sum(x_{i1}-\bar x)x_{i2}}{S_{xx}}\beta_2=\beta_1+\frac{\sum(x_{i1}-\bar x)x_{i2}}{S_{xx}}$$
 
