--- a/docs/assignment561/hw03.Rmd
+++ b/docs/assignment561/hw03.Rmd
@@ -56,17 +56,36 @@ $$\therefore \lim_{n\to\infty}F_X(x+\frac1n)=F_X(x)$$
 
 
 **2.2** In each of the following find the pdf of Y.
-(a) $Y=X^2\quad and\quad fx(x)=1, 0<x<1$
+(a) $Y=X^2\quad and\quad f_X(x)=1, 0<x<1$
+
+$$F_Y(y)=P(Y\le y)=P(X^2\le y)=P(-\sqrt y\le X\le\sqrt y)=P(X\le\sqrt y)-P(X\le-\sqrt y)$$
+
+$$\because f_X(x)=1, 0<x<1,\quad X\le 0\ is\ \emptyset\quad \therefore P(X\le-\sqrt y)=0,\quad F_X(x)=\int f_X(x)=\int1=x $$
+
+$$F_Y(y)=P(X\le\sqrt y)=F_X(\sqrt y)=\sqrt y,\ 0<\sqrt y<1$$
+
+$$f_Y(y)=\frac{dF_Y(y)}{dy}=\frac{d\sqrt y}{dy}=\frac1{2\sqrt y},\quad 0<y<1$$
 
 (b) $Y=-\log X$ and X has pdf
 
-$$f_X(x)=\frac{(n+m+1)!}{n!m!}X^n(1-x)^m,\quad 0<x<1,\quad
+$$f_X(x)=\frac{(n+m+1)!}{n!m!}x^n(1-x)^m,\quad 0<x<1,\quad
 n,m\ positive\ integers$$
+
+ > $Y=-\log X$ is a monotone decreasing function, thus we can use shortcut.
+
+$$\because Y=-\log X,\quad \therefore X=e^{-Y}$$
+
+$$f_Y(y)=f_X(x)|\frac{dx}{dy}|=\frac{(n+m+1)!}{n!m!}(e^{-y})^n(1-e^{-y})^m|\frac{d(e^{-y})}{dy}|=\frac{(n+m+1)!}{n!m!}e^{-ny-y}(1-e^{-y})^m,\ 0<y<\infty$$
 
 (c) $Y=e^X$ and X has pdf
 
 $$fx(x)=\frac1{\sigma^2}xe^{-(x/\sigma)^2/2},\quad 0<x<\infty,\quad\sigma^2\ a\ positive\ constant$$
 
+ > $Y=e^X$ is a monotone increasing function, thus we can use shortcut.
+
+$$\because Y=e^X,\quad \therefore X=\ln Y$$
+
+$$f_Y(y)=f_X(x)|\frac{dx}{dy}|=\frac1{\sigma^2}xe^\frac{-(\frac x\sigma)^2}2|\frac{d(\ln y)}{dy}|=\frac{\ln (y)}{\sigma^2y}e^\frac{-(\frac{\ln y}\sigma)^2}2$$
 
 **2.12** A random right triangle can be constructed in the following manner. Let X be a random angle whose distribution is uniform on $(0, \pi/2)$. For each X, construct a triangle as pictured below. Here, Y = height of the random triangle. For a fixed constant d, find the distribution of Y and EY.
 
